[metadata]
name=teslacam
version=1.0.2
author=SillyGoat
author_email=fake.me.now.and.forever@gmail.com
description=Consolidate and format Tesla vehicle camera video data
long_description=file:README.md
long_description_content_type=text/markdown
url=https://github.com/SillyGoat/teslacam
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages=find:
python_requires=>=3.8
